# kernel_common-6.1-lts

./: BUILD.bazel  Kbuild  Kconfig.ext.gs101  Makefile  README.md  auth22.c  bazel.WORKSPACE  bcl.h  build.config.gs101  build.config.kasan  build.config.khwasan  device.bazelrc  device_build_configs.bzl  exynos_drm_connector.c  exynos_drm_decon.c  exynos_drm_dp.c  exynos_drm_dsim.c  gbms_storage.h  goog_touch_interface.c  google_battery.c  google_bcl_core.c  google_bcl_qos.c  google_bcl_votable.c  google_bms.c  google_bms.h  google_ccd.c  google_dual_batt_gauge.c  google_eeprom.c  google_eeprom_02.c  gs101_defconfig  hl7132_charger.c  hl7132_charger.h  hl7132_regs.h  link_device.c  lwis_commands.h  lwis_device.c  lwis_device_i2c.c  lwis_device_i2c.h  lwis_device_ioreg.c  lwis_device_test.c  (+33 more)
Documentation/devicetree/bindings/power/mitigation/: google_bcl.yaml
alsa/: aoc_alsa.h  aoc_alsa_hw.c
android/: abi_gki_aarch64_db845c  abi_gki_aarch64_qcom
arch/arm64/configs/: gki_defconfig  raviole_defconfig
borr_mali_kbase/: mali_kbase_gpu_metrics.c
borr_mali_kbase/backend/gpu/: mali_kbase_pm_driver.c
borr_mali_kbase/platform/pixel/: mali_kbase_config_platform.h  pixel_gpu_dvfs.h  pixel_gpu_dvfs_metrics.c
cal_9865/: dp_reg.c
cs40l26/: cs40l26-sysfs.c  cs40l26.c  cs40l26.h
debug/: debug.bazelrc  debug_kmemleak_defconfig  debug_locking_defconfig  debug_memory_defconfig  kasan_defconfig  khwasan_defconfig
drivers/android/: vendor_hooks.c
drivers/edgetpu/: BUILD.bazel  Kbuild  Makefile  abrolhos-platform.c  abrolhos-pm.c  abrolhos-thermal.c  edgetpu-core.c  edgetpu-debug-dump.c  edgetpu-device-group.c  edgetpu-dmabuf.c  edgetpu-domain-pool.h  edgetpu-google-iommu.c  edgetpu-kci.c  edgetpu-mmu.h  edgetpu-mobile-platform.h  mobile-pm.c
drivers/input/fps_touch_handler/: fps_touch_handler.c  fps_touch_handler.h
drivers/iommu/: exynos-pcie-iommu-whi.c  exynos-pcie-iommu-zuma.c
drivers/pci/controller/dwc/: pcie-exynos-common.h  pcie-exynos-rc.c
drivers/soc/google/: Kbuild  Kconfig
drivers/soc/google/debug/: exynos-ehld.c
drivers/soc/google/pa_kill/: pa_kill_core.c
drivers/soc/google/pixel_stat/mm/: init.c  vmscan.c  vmscan.h
drivers/soc/google/smra/: Kbuild  smra_core.c  smra_core.h  smra_procfs.c  smra_sysfs.c  smra_sysfs.h
drivers/soc/google/vh/include/: pixel_mm_hint.h  sched.h
drivers/soc/google/vh/kernel/mm/: pixel_mm_hint.c
drivers/soc/google/vh/kernel/sched/: core.c  fair.c  procfs_node.c  sched_lib.c  sched_priv.h
drivers/tty/serial/: exynos_tty.c
drivers/usb/dwc3/: dwc3-exynos-otg.c  exynos-otg.h
drivers/usb/host/: xhci-exynos.c
drivers/usb/typec/tcpm/google/: tcpci_max77759.c  tcpci_max77759.h
dts/: Makefile  gs101-isp.dtsi  gs101-raviole-battery.dtsi  gs101-raviole-bcl.dtsi
fs/f2fs/: file.c
ftm5/: fts.c
google-devices/common/: BUILD.bazel
google-devices/common/debug/: debug.bazelrc
google-devices/gs101/: gs101_defconfig
google-devices/gs101/dts/: gs101-isp.dtsi
google-devices/raviole/: device.bazelrc
google-devices/raviole/dts/: Makefile
google-modules/aoc/alsa/: aoc_alsa_ctl.c  aoc_alsa_hw.c
google-modules/bluetooth/broadcom/: nitrous.c
google-modules/bms/: google_battery.c  google_charger.c  hl7132_charger.h  ln8411_gbms_pps.c  max77779.h  max77779_charger.c  max77779_fg.c  max77779_vimon.c  max77779_vimon.h
google-modules/display/common/gs_panel/: drm_panel_funcs_defaults.c  gs_panel.c  gs_panel_internal.h
google-modules/display/common/include/gs_panel/: gs_panel.h
google-modules/display/samsung/: exynos_drm_connector.c  exynos_drm_decon.c  exynos_drm_drv.c  exynos_drm_drv.h
google-modules/display/samsung/panel/: panel-samsung-drv.c
google-modules/gpu/borr_mali_kbase/backend/gpu/: mali_kbase_pm_driver.c
google-modules/gpu/mali_kbase/: Kbuild  Makefile  mali_kbase_mem.c  mali_linux_trace.h
google-modules/gpu/mali_kbase/platform/pixel/: pixel_gpu_debug.h  pixel_gpu_dvfs_metrics.c  pixel_gpu_sysfs.c
google-modules/lwis/: lwis_device.h  lwis_ioctl.c
google-modules/power/mitigation/: bcl.h  google_bcl_core.c  google_bcl_sysfs.c  google_bcl_votable.c  max77759_vdroop.c  max77779_vdroop.c
google-modules/power/mitigation/Documentation/devicetree/bindings/power/mitigation/: google_bcl.yaml
google-modules/radio/samsung/s5300/: link_device.c
google-modules/soc/gs/drivers/i2c/busses/: i2c-exynos5.c
google-modules/soc/gs/drivers/input/: Kbuild  Kconfig
google-modules/soc/gs/drivers/input/fps_touch_handler/: fps_touch_handler.c
google-modules/soc/gs/drivers/soc/google/: Kconfig  gs-chipid.c
google-modules/soc/gs/drivers/soc/google/pixel_stat/mm/: init.c  vmscan.c
google-modules/soc/gs/drivers/soc/google/vh/include/: pixel_mm_hint.h  sched.h
google-modules/soc/gs/drivers/usb/dwc3/: dwc3-exynos-otg.c
google-modules/soc/gs/drivers/usb/typec/tcpm/google/: tcpci_max77759.c
google-modules/touch/common/: goog_touch_interface.c  goog_touch_interface.h
gs_drm/: gs_drm_connector.c
gs_panel/: drm_bridge_funcs.c  gs_panel.c  gs_panel_sysfs.c
include/gs_drm/: gs_display_mode.h  gs_drm_connector.h
include/gs_panel/: dcs_helper.h  gs_panel.h
include/linux/: sched.h
include/trace/: panel_trace.h
kernel/: BUILD.bazel
kernel/drivers/net/ieee802154/: dw3000_spi.c
kernel/printk/: printk.c
kernel/sched/: core.c  fair.c
kleaf/: common.BUILD.bazel  device.bzl  device_build_configs.bzl
mali_kbase/: Kbuild  mali_kbase_core_linux.c  mali_kbase_defs.h  mali_kbase_js.c
mali_kbase/Documentation/ABI/testing/: sysfs-device-mali
mali_kbase/backend/gpu/: mali_kbase_pm_driver.c
mali_kbase/csf/: mali_kbase_csf.c  mali_kbase_csf_scheduler.c
mali_kbase/device/: mali_kbase_device.c
mali_kbase/device/backend/: mali_kbase_device_hw_csf.c
mali_kbase/platform/pixel/: pixel_gpu_debug.c
panel/: panel-samsung-drv.c
platform/anchorage/: lwis_platform_anchorage.c
platform/busan/: lwis_platform_busan.c
platform/casablanca/: lwis_platform_casablanca.c
tas25xx/src/: tas25xx-codec.c  tas25xx-regbin-parser.c
usi/: goog_usi_stylus.c
(+5 files in other folders)
