# SPDX-License-Identifier: GPL-2.0-or-later

load("@bazel_skylib//lib:selects.bzl", "selects")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")

package(
    default_visibility = [
        "//private/devices/google:__subpackages__",
    ],
)

config_setting(
    name = "gki_aosp",
    flag_values = {
        ":gki_kernel_dir": "aosp",
    },
)

config_setting(
    name = "gki_aosp_staging",
    flag_values = {
        ":gki_kernel_dir": "aosp-staging",
    },
)

string_flag(
    name = "gki_kernel_dir",
    build_setting_default = "aosp",
)

string_flag(
    name = "debug_fragment",
    build_setting_default = "",
)

config_setting(
    name = "blktest",
    flag_values = {
        ":debug_fragment": "blktest",
    },
)

config_setting(
    name = "debug_api",
    flag_values = {
        ":debug_fragment": "debug_api",
    },
)

config_setting(
    name = "debug_kmemleak",
    flag_values = {
        ":debug_fragment": "debug_kmemleak",
    },
)

config_setting(
    name = "debug_locking",
    flag_values = {
        ":debug_fragment": "debug_locking",
    },
)

config_setting(
    name = "debug_memory",
    flag_values = {
        ":debug_fragment": "debug_memory",
    },
)

config_setting(
    name = "debug_memory_accounting",
    flag_values = {
        ":debug_fragment": "debug_memory_accounting",
    },
)

config_setting(
    name = "function_tracer",
    flag_values = {
        ":debug_fragment": "function_tracer",
    },
)

config_setting(
    name = "kasan",
    flag_values = {
        ":debug_fragment": "kasan",
    },
)

config_setting(
    name = "khwasan",
    flag_values = {
        ":debug_fragment": "khwasan",
    },
)

config_setting(
    name = "cmdline_lto_is_none",
    flag_values = {
        "//build/kernel/kleaf:lto": "none",
    },
)

# These debug fragments sets LTO=none.
selects.config_setting_group(
    name = "lto_none",
    match_any = [
        # keep sorted
        ":cmdline_lto_is_none",
        ":function_tracer",
        ":kasan",
    ],
)

# Do not use this flag directly, use --config=pixel_kunit,
# which will enable this and any necessary dependencies.
bool_flag(
    name = "enable_kunit",
    build_setting_default = False,
)

config_setting(
    name = "kunit_enabled",
    flag_values = {
        ":enable_kunit": "1",
    },
)

exports_files([
    "build.config.slider.blktest",
    "build.config.slider.debug_api",
    "build.config.slider.debug_kmemleak",
    "build.config.slider.debug_locking",
    "build.config.slider.debug_memory",
    "build.config.slider.debug_memory_accounting",
    "build.config.slider.kasan",
    "build.config.slider.khwasan",
])
